fix overflow

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,6 +2,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 62.5%; /* 1rem = 10px */
+  overflow: auto;
 }
 
 body {
